<resources>
    <string name="app_name">Privacy Guard</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">11 digit phone number</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="invalid_phone">Phone must be 11 digits</string>
    <string name="invalid_name">Name must be at least 3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forget_request_failed">"Couldn't request password reset, please try again later"</string>
    <string name="signup_failed">"Registration failed"</string>
    <string name="incorrect_fields">Please correct the input fields, first!</string>
    <string name="forget_pass_hint">Please enter an email, afterwards click forget password to rest!</string>
    <string name="forget_pass_sent">We have sent you an email, please check your inbox for password recovery</string>
    <string name="register_login_hint">Already have an account? Login</string>

    <!-- USAGEAPP -->

    <string name="about">About</string>

    <string name="close">Close</string>

    <string name="detail">Details</string>
    <string name="duration">Duration</string>
    <string name="sort_by">Sort</string>

    <string name="enable_apps_monitor">Enable apps monitor</string>
    <string name="enable_apps_monitoring">Apps monitoring</string>

    <string name="feedback">feedback: privacy-guard@gmail.com</string>

    <string name="grant_success">Grand permission successfully</string>

    <string name="hide_system_apps">Hide system Apps</string>
    <string name="hide_uninstall_apps">Hide uninstalled Apps</string>

    <string name="ignore">Ignore this app</string>
    <string name="ignore_hint">Apps in this list will be hidden</string>
    <string name="ignore_list">Ignore list</string>
    <string name="ignore_success">Move to ignore list successfully</string>

    <string name="more">More detail</string>
    <string name="app_info">App info</string>

    <string name="notification_title">AppTimeline running</string>
    <string name="notification_message">monitoring your app usage</string>
    <string name="not_support">You device not support monitoring</string>

    <string name="open">Open</string>

    <string name="refresh">Refresh</string>

    <string name="settings">Settings</string>
    <string name="settings_function">Functions</string>
    <string name="settings_more">More</string>
    <string name="share">Like and share</string>
    <string name="share_desc">Hey check out this app, it\'s so cool, it can help checkout every app\'s time your spend on: %1$s%2$s</string>
    <string name="slogan">Monitor Apps usage</string>
    <string name="sort">Sort By</string>

    <string name="toast_permission">Please find \"AppsTimeline\" and grant the permission</string>
    <string name="times">%1$s · %2$d times</string>
    <string name="times_only">times</string>
    <string name="total">%1$s</string>

    <string name="version">v %1$s</string>

    <string name="wifi_data">WiFi:%1$s · Mobile:%2$s</string>
</resources>