<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Login"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnLogin"
        style="@style/loginButton"
        android:text="Login"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        android:id="@+id/signup"
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/login_signup_hint"
        android:layout_marginTop="10dp"/>

</LinearLayout>