<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            style="@style/modifiedEditText"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMobile"
            style="@style/modifiedEditText"
            android:hint="@string/login_mobile_number_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        style="@style/loginButton"
        android:text="Signup"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        android:id="@+id/login"
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:text="@string/register_login_hint"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

</LinearLayout>